# open-smartwatch.github.io

./: .gitignore  1_light-edition.html  2_gps-edition.html  3_3d-files.html  404.html  4_flashing.html  5_community_forks.html  README.md  index.html  mkdocs.yml  pyproject.toml  search.html  sitemap.xml
.github/: embed_osw_os_docs.py  merge_configs.py
.github/workflows/: build.yml
1_light-edition/: index.html
2_gps-edition/: index.html
3_3d-files/: index.html
3d-file-render-stage/: 3d-files-render-stage.blend
4_flashing/: index.html
5_community_forks/: index.html
Apps/: 01_watchfaces.html  02_tools.html  03_games.html
Apps/games/: index.html
Apps/tools/: index.html
Apps/watchfaces/: index.html
Build your Own/: 1_assembly.html  2_aliexpress.html  3_tools.html
Build your Own/1_assembly/: index.html
Build your Own/2_aliexpress/: index.html
Build your Own/3_tools/: index.html
docs/: 1_light-edition.md  2_gps-edition.md  3_3d-files.md  4_flashing.md  5_community_forks.md  coc.md  index.md
docs/Build your Own/: 1_assembly.md  2_aliexpress.md  3_tools.md
docs/apps/: games.md  tools.md
docs/gallery/: gallery-main.md
docs/howto/: aliexpress.md  assembly.md  contribute.md  hardware.md  software.md
docs/oswapps/: tools.md  watchfaces.md
docs/resources/: 3d-files-gps-edition.md  3d-files-light-edition.md  3d-files.md  firmware.md  hardware.md
docs/stylesheets/: max-width.css
docs/watches/: community-forks.md  gps-edition.md  light-edition.md
gallery/gallery-main/: index.html
search/: search_index.json
stylesheets/: tags.css
(+15 files in other folders)
