[tool.poetry]
name = "open-smartwatch.github.io"
version = "0.1.0"
description = ""
authors = []
package-mode = false

[tool.poetry.dependencies]
python = "^3.8"
mkdocs = "^1.4.1"
importlib-metadata = "^5.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
